--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
+    "react-calendar-heatmap": "^1.10.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
